添加加’添加课程状态

--- a/pages/education/courseDetails/courseDetails.wxml
+++ b/pages/education/courseDetails/courseDetails.wxml
@@ -68,5 +68,5 @@
       </view>
     </view>
   </view>
-  <view class="start-course">加入学习</view>
+  <view class="start-course" bindtap="joinLearning">{{courseLearning}}</view>
 </view>
