增加下拉加载更多功能

--- a/pages/index/notice/notice.wxml
+++ b/pages/index/notice/notice.wxml
@@ -4,4 +4,4 @@
 <block wx:for="{{noticeList}}" wx:key="index">
   <template is="itemList" data="{{...item}}"/>
 </block>
-
+<view wx:if="{{!hasMore}}" class="no-more">已经到底了</view>
