--- a/pages/index/notice/notice.wxml
+++ b/pages/index/notice/notice.wxml
@@ -1,7 +1,9 @@
-<!--pages/index/notice/notice.wxml-->
-<!--通知公告列表页面-->
-<import src="/pages/common/itemList/itemList"/>
+<!-- pages/index/notice/notice.wxml -->
+<!-- 通知公告列表页面 -->
+<import src="/pages/common/itemList/itemList" />
 <block wx:for="{{noticeList}}" wx:key="index">
-  <template is="itemList" data="{{...item}}"/>
+  <!-- <view bindtap="toDetail"> -->
+    <template is="itemList" data="{{...item}}" />
+  <!-- </view> -->
 </block>
 <view wx:if="{{!hasMore}}" class="no-more">已经到底了</view>
